Fix hover bug on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -216,12 +216,12 @@ h1, li {
     visibility: hidden;
 }
 
-.turn-history:not(.empty) > div:hover small {
+.turn-history:not(.empty) > div:active small {
     visibility: visible;
 }
 
-@media (any-hover: hover) {
-    .turn-history:not(.empty) > div:active small {
+@media (hover: hover) {
+    .turn-history:not(.empty) > div:hover small {
         visibility: visible;
     }
 }
